--- a/src/Components/Main.module.css
+++ b/src/Components/Main.module.css
@@ -56,7 +56,7 @@ main .content {
     width: 100%;
     border-top: 1px solid var(--gray-400);
     border-radius: 8px;
-    padding: 64px 24px;
+    /* padding: 64px 24px; */
     margin-top: 24px;
     gap: 16px;
 }
