--- a/src/Components/Tasks.module.css
+++ b/src/Components/Tasks.module.css
@@ -31,7 +31,7 @@ ul {
 
 .wrapper input[type="radio"]:focus {
     border: none;
-    outline: 2px solid var(--purple);
+    outline: 3px solid var(--purple);
 }
 
 .wrapper input[type="radio"]:checked {
@@ -66,4 +66,9 @@ ul {
 
 .trashIcon:hover {
     color: var(--danger);
+}
+
+.trashIcon:focus {
+    border-radius: 50%;
+    padding: 2px;
 }
