--- a/src/Components/Main.module.css
+++ b/src/Components/Main.module.css
@@ -61,6 +61,13 @@ main .content {
     gap: 16px;
 }
 
+.content .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 24px;
+}
+
 main article .text strong {
     font-size: 1rem;
     font-weight: 700;
