--- a/src/Components/Tasks.module.css
+++ b/src/Components/Tasks.module.css
@@ -8,8 +8,8 @@ ul {
     height: 72px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    padding: 8px;
+    justify-content: space-between;
+    padding: 16px;
     border-radius: 8px;
     list-style: none;
 }
